# cloud-upload

./: .gitignore  README.md  WATERMARK_USAGE.md  blog-promotion.md  index.html  package-lock.json  package.json  stats.html  vite.config.js
docs/: SPONSORS.json  SPONSOR_GUIDE.md  WASM_BUILD_TROUBLESHOOTING.md  aliyun-cloud.md  huawei-cloud.md  tencent-cloud.md
examples/: watermark-example.vue
scripts/: generate-changelog.js
src/: App.vue  index.js  main.js
src/assets/iconfont/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
src/components/: CloudUpload.vue  FilePreview.vue
src/plugins/: aliyun.js  huawei.js  tencent.js
src/style/: CloudUpload.scss
src/utils/: fileHelper.js  watermarkHelper.js
wasm-watermark/: Cargo.toml  README.md  build.sh  test.html  watermarkHelper.js
wasm-watermark/pkg/: package.json  wasm_watermark.d.ts  wasm_watermark.js  wasm_watermark_bg.wasm  wasm_watermark_bg.wasm.d.ts  watermark.js
wasm-watermark/src/: lib.rs
